Golden 182->183: integration-harness increment 1 = bounded WORLD_MAPS_DATA holder seam (SM_TELEPORT_LOC), 0 fidelity bugs
First step of the deferred integration-harness sub-project. Golden SM_TELEPORT_LOC (3 cases: regular-map/instance-map/regular-NONE-anim) via a new DataManager.WORLD_MAPS_DATA holder seam - the first golden driving a packet through a World-family DataManager holder rather than scalar/ctor state only.

New Java GoldenWorldPacketFixtureGeneratorTest (mvn oracle) + C# GoldenWorldPacketFixtureTests (both join the GoldenDataManager serial collection). Seam = a WorldMapsData carrying two templates (instance=false 220020000 + instance=true 320080000), built identically both sides; SM_TELEPORT_LOC.writeImpl's only non-ctor read is the ctor's WORLD_MAPS_DATA.getTemplate(mapId).isInstance() branch (instanceId vs mapId channel), covered both ways. Byte-exact on first capture; SM_TELEPORT_LOC.cs confirmed faithful 1:1.

The live-World seam (SM_PLAYER_SPAWN/SM_DIE) is NOT bounded this tick: Java World is a static-final SingletonHolder.instance=new World() that cannot be reflectively overridden and whose real ctor pulls WORLD_MAPS_DATA -> WorldMap -> WorldMapInstance -> ZoneService(ZONE_DATA)+InstanceEngine. Exact blocker + what the seam needs documented in docs/next-slop-targets.md.

Build 0, golden 183/183, full suite 470/0, bootstrap 9/9.